--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -117,3 +117,6 @@ dependencies {
         implementation jscFlavor
     }
 }
+
+// Apply the vector icons fonts.gradle script
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
