--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^20.5.0",
+    "@react-native-firebase/auth": "^20.5.0",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "firebase": "^10.13.2",
@@ -17,8 +21,10 @@
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-google-signin": "^2.1.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
